Added a link to the EBI help page

--- a/repo/site/trunk/intact-site/src/main/webapp/contents/contact.xhtml
+++ b/repo/site/trunk/intact-site/src/main/webapp/contents/contact.xhtml
@@ -18,9 +18,12 @@
 
         <ui:define name="contents">
 
-            <h1>Contact</h1>
+            <h1>Contact us:</h1>
 
-            <h2>Mailing lists, bug reports:</h2>
+                Should you require help on any matter related to IntAct, please submit your question to our
+               <a href="http://www.ebi.ac.uk/support/index.php?query=intact" target="_blank">helpdesk</a>.
+
+            <h1>Mailing lists, bug reports:</h1>
             
             The following mailing lists have been set up:
             <ul>
@@ -35,11 +38,9 @@
                 </li>
             </ul>
 
-
         </ui:define>
 
     </ui:composition>
-
 
 </f:view>
 
