--- a/repo/site/trunk/intact-site/src/main/webapp/contents/data_submission_content.xhtml
+++ b/repo/site/trunk/intact-site/src/main/webapp/contents/data_submission_content.xhtml
@@ -15,15 +15,21 @@
 
              <h1>Data Submission</h1>
 
-            IntAct encourages and welcomes direct user submissions of
-            protein interaction data to be published in peer-reviewed publications.
-            Please read the <a href="http://imex.sourceforge.net/MIMIx/" target="_blank">IMEx guideline</a>
-            for further details.
-            <br/>
-            Should you require curator assistance, please
-        <a href="http://www.ebi.ac.uk/support/index.php?query=intact" target="_blank">contact us</a>.
-    </ui:composition>
+            The IntAct database encourages and welcomes direct user submissions of molecular interaction data,
+            which may be deposited with us prior to publication in a peer-reviewed journal. We will be happy to
+            assist you with final data preparation and will make your submission publicly available as soon as
+            your article is published. We are happy to accept data in any format, but recommend that you read
+            the <a href="http://imex.sourceforge.net/MIMIx/" target="_blank">IMEx guideline</a> which may help
+            you in preparing for both deposition and publication.
+            Please <a href="http://www.ebi.ac.uk/support/index.php?query=intact" target="_blank">contact us</a>
+            once you are ready to send your data, if you have any further questions, or if you would like curator
+            assistance in your data preparation.
 
+            We are also willing to curate specific papers, on request, or become more actively involved in specific
+            projects. Again, please <a href="http://www.ebi.ac.uk/support/index.php?query=intact" target="_blank">contact us</a>
+            if you would like to discuss this further.
+            
+    </ui:composition>
 
 </f:view>
 
