--- a/repo/site/trunk/intact-site/src/main/webapp/main-template.xhtml
+++ b/repo/site/trunk/intact-site/src/main/webapp/main-template.xhtml
@@ -50,6 +50,23 @@
             </ui:define>
 
         </ebi:page>
+
+        <!-- Google Analytics -->
+        <ui:param name="googleAccount" value="#{initParam['uk.ac.ebi.intact.GOOGLE_ANALYTICS_ACCOUNT']}"/>
+
+        <h:panelGroup rendered="#{not empty googleAccount}">
+            <script type="text/javascript">
+            var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+            document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+            </script>
+            <script type="text/javascript">
+            var pageTracker = _gat._getTracker('#{googleAccount}');
+            pageTracker._initData();
+            pageTracker._trackPageview();
+            </script>
+
+        </h:panelGroup>
+
     </ui:composition>
 </f:view>
 </html>
