--- a/repo/site/trunk/intact-site/src/main/webapp/main-template.xhtml
+++ b/repo/site/trunk/intact-site/src/main/webapp/main-template.xhtml
@@ -52,15 +52,15 @@
         </ebi:page>
 
         <!-- Google Analytics -->
-        <ui:param name="googleAccount" value="#{initParam['uk.ac.ebi.intact.GOOGLE_ANALYTICS_ACCOUNT']}"/>
+        <ui:param name="googleTracker" value="#{initParam['uk.ac.ebi.intact.GOOGLE_ANALYTICS_TRACKER']}"/>
 
-        <h:panelGroup rendered="#{not empty googleAccount}">
+        <h:panelGroup rendered="#{not empty googleTracker}">
             <script type="text/javascript">
             var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
             document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
             </script>
             <script type="text/javascript">
-            var pageTracker = _gat._getTracker('#{googleAccount}');
+            var pageTracker = _gat._getTracker('#{googleTracker}');
             pageTracker._initData();
             pageTracker._trackPageview();
             </script>
