--- a/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/help/search_help_content.xhtml
+++ b/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/help/search_help_content.xhtml
@@ -103,7 +103,7 @@
             <h:outputText value="Yes"/>
             <bs:queryLink value="type:&quot;physical interaction&quot;" escape="false"/>
 
-            <h:outputText value="detmehod"/>
+            <h:outputText value="detmethod"/>
             <h:outputText value="Interaction Detection method(s)"/>
             <h:outputText value="Yes"/>
             <bs:queryLink value="detmethod:&quot;two hybrid*&quot;" escape="false"/>
