keep the url flexible

--- a/repo/service/trunk/intact-mart/src/canned-queries-demo/htdocs/cannedQueryPride.html
+++ b/repo/service/trunk/intact-mart/src/canned-queries-demo/htdocs/cannedQueryPride.html
@@ -11,7 +11,7 @@
 <script type="text/javascript">
 
 
-        var firstPartURL = 'http://evo-test.ebi.ac.uk:5543/intact/martview?VIRTUALSCHEMANAME=default&ATTRIBUTES=INTACT.default.interaction.interaction_xref__dm_primary_id|INTACT.default.interaction.interaction_type_full|INTACT.default.interaction.experimental_role_short|INTACT.default.interaction.biological_role_short|INTACT.default.interaction.interactor_short|INTACT.default.interaction.interactor_full&FILTERS=INTACT.default.filter.int_primary_id_filter.\x22';
+        var firstPartURL = '../../intact/martview?VIRTUALSCHEMANAME=default&ATTRIBUTES=INTACT.default.interaction.interaction_xref__dm_primary_id|INTACT.default.interaction.interaction_type_full|INTACT.default.interaction.experimental_role_short|INTACT.default.interaction.biological_role_short|INTACT.default.interaction.interactor_short|INTACT.default.interaction.interactor_full&FILTERS=INTACT.default.filter.int_primary_id_filter.\x22';
 
 
         var lastPartURL = '\x22|INTACT.default.filter.int_database.\x22pride\x22&VISIBLEPANEL=resultspanel';
