keeps the url flexible

--- a/repo/service/trunk/intact-mart/src/canned-queries-demo/htdocs/cannedQueryDataset.html
+++ b/repo/service/trunk/intact-mart/src/canned-queries-demo/htdocs/cannedQueryDataset.html
@@ -6,7 +6,7 @@
 
 <script type="text/javascript">
 
-	var firstPartURL = 'http://evo-test.ebi.ac.uk:5543/intact/martview?VIRTUALSCHEMANAME=default&ATTRIBUTES=INTACT.default.interaction.interaction_type_short|INTACT.default.interaction.experimental_role_short|INTACT.default.interaction.biological_role_short|INTACT.default.interaction.interactor_short|INTACT.default.interaction.interactor_full&FILTERS=INTACT.default.filter.exp_dataset.\x22';
+	var firstPartURL = '../../intact/martview?VIRTUALSCHEMANAME=default&ATTRIBUTES=INTACT.default.interaction.interaction_type_short|INTACT.default.interaction.experimental_role_short|INTACT.default.interaction.biological_role_short|INTACT.default.interaction.interactor_short|INTACT.default.interaction.interactor_full&FILTERS=INTACT.default.filter.exp_dataset.\x22';
 
 	var secondPartURL = '\x22&VISIBLEPANEL=resultspanel';
 
