replaced missing spacer image by a trinidad spacer

--- a/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/sidebar.xhtml
+++ b/repo/service/trunk/search/binary/binary-search-webapp/src/main/webapp/sidebar.xhtml
@@ -36,8 +36,8 @@
 
         <!-- InstanceEndEditable -->
         <script type="text/javascript" src="http://www.ebi.ac.uk/inc/js/sidebars.js"></script>
-        <img src="http://www.ebi.ac.uk/inc/images/spacer.gif" class="spacer" alt="spacer"/>
-        
+        <tr:spacer width="1" />
+
         <h:panelGrid styleClass="default">
             <h:outputText value="Index: #{searchBean.defaultIndex.name}"/>
             <h:outputText value="Version: #{buildInfo.version}"/>
